--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-video": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
